[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/NPC/Animations/GolemAnimation.tscn" type="PackedScene" id=1]
[ext_resource path="res://Golem.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 12.708, 18.4092 )

[node name="Golem" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="GolemAnimation" parent="." instance=ExtResource( 1 )]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 1.70638, -6.82561 )
shape = SubResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="Timers" type="Node" parent="."]

[node name="Timer" type="Timer" parent="Timers"]

[node name="Rays" type="Node2D" parent="."]

[node name="EdgeDetector" type="RayCast2D" parent="Rays"]
position = Vector2( 16, 0 )
enabled = true
cast_to = Vector2( 0, 16 )

[node name="WallDetector" type="RayCast2D" parent="Rays"]
position = Vector2( 15, 0 )
enabled = true
cast_to = Vector2( 10, 0 )
[connection signal="timeout" from="Timers/Timer" to="." method="_on_Timer_timeout"]
